--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.6",
+    "firebase": "^10.8.0",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "react": "^18",
