--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.6",
+    "@react-email/components": "0.0.14",
+    "axios": "^1.6.7",
     "firebase": "^10.8.0",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-email": "2.0.0",
+    "react-hot-toast": "^2.4.1",
+    "resend": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
